@@ -1,1 +1,5 @@
 # JXML
+
+javac --module-path .\javafx-sdk-21.0.6\lib --add-modules javafx.controls,javafx.fxml Main.java HelloController.java
+
+java --module-path .\javafx-sdk-21.0.6\lib --add-modules javafx.controls,javafx.fxml Main
